fix navigation z-index issue

--- a/assets/scss/layout/_navigation.scss
+++ b/assets/scss/layout/_navigation.scss
@@ -1,5 +1,5 @@
 .navbar{
-    z-index: 2;
+    z-index: 4;
     margin-top: 64px;
     position: fixed;
     left: 0;
